# osrs_tui

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/osrs_tui/: __init__.py  __main__.py  app.py
src/osrs_tui/screens/: calculator.py  dashboard.py  home.py  resource.py  skills.py  wealth.py
src/osrs_tui/utils/: api.py  calc.py  db.py  ge_api.py
src/osrs_tui/utils/data/: _firemaking.json  actions.json
src/osrs_tui/utils/data/sql/: ge_schema.sql  schema.sql
src/osrs_tui/widgets/: charts.py  stats.py
tests/: test_osrs_tui.py
