[tool.poetry]
name = "osrs_tui"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^9.12.0"
textual = "^8.2.4"
textual-dev = "^1.8.0"
python-dotenv = "^1.2.2"
requests = "^2.33.1"
runescape-hiscore = "^0.1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
