[tool.poetry]
name = "osrs_tui"
version = "0.3.0"
description = "A package for doing great things!"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^8.2.4"
python-dotenv = "^1.2.2"
requests = "^2.33.1"


[tool.poetry.group.dev.dependencies]
ipython = "^9.12.0"
textual-dev = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osrs-tui = "osrs_tui.app:main"